Ranges are correctly aligned.

--- a/frontend/style_dropdown2.css
+++ b/frontend/style_dropdown2.css
@@ -6,9 +6,10 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    
 }
 body{
-    background-color: #e3f2fd;
+    background-color: #F2F3F4 ;
 }
 #dropdown2{
     position: relative;
